# acquire-py

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  game.py  lobby.py  main.py
app/static/: lobby.js  styles.css
app/templates/: index.html
tests/: test_app.py  test_game.py  test_lobby.py
